Resolved styling issue on speakers page

--- a/src/components/CategoryProduct/CategoryProductRight/CategoryProductRight.css
+++ b/src/components/CategoryProduct/CategoryProductRight/CategoryProductRight.css
@@ -28,7 +28,7 @@
   gap: 2rem;
 }
 
-.categoryProductRight__content h3 {
+.categoryProductRight__content-product-name {
   width: 450px;
   height: 120px;
   font-weight: 700;
