--- a/src/components/CategoryProduct/CategoryProductLeft/CategoryProductLeft.css
+++ b/src/components/CategoryProduct/CategoryProductLeft/CategoryProductLeft.css
@@ -39,8 +39,18 @@
   color: var(--color-pale-orange);
 }
 
-.categoryProductLeft__content h3 {
+.categoryProductLeft__content-product-name {
   width: 450px;
+  height: 120px;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 60px;
+  letter-spacing: 1.42857px;
+  text-transform: uppercase;
+}
+
+.productCategory-speakers {
+  width: 400px;
   height: 120px;
   font-weight: 700;
   font-size: 60px;
