--- a/src/components/ShopCategory/ShopCategory.css
+++ b/src/components/ShopCategory/ShopCategory.css
@@ -82,10 +82,14 @@
   font-size: 13px;
   line-height: 18px;
   letter-spacing: 1px;
-  opacity: 0.6;
+  opacity: 0.8;
   text-transform: uppercase;
   color: var(--color-black);
   text-decoration: none;
+}
+
+.shopCategory-link:hover {
+  color: var(--color-dark-orange);
 }
 
 .shopCategory-arrowRight {
