Clicking the product links on the home page navigates to corresponding product page

--- a/src/components/HomeContent/YX1Earphones/YX1Earphones.css
+++ b/src/components/HomeContent/YX1Earphones/YX1Earphones.css
@@ -54,3 +54,9 @@
   text-transform: uppercase;
   border: 1px solid black;
 }
+
+.YX1Earphones-content button:hover {
+  cursor: pointer;
+  background-color: var(--color-black);
+  color: var(--color-white);
+}
