--- a/src/containers/Cart/Cart.css
+++ b/src/containers/Cart/Cart.css
@@ -40,3 +40,46 @@
   color: var(--color-dark-orange);
   text-decoration: underline;
 }
+
+.cart-total {
+  display: flex;
+  flex-direction: row;
+  width: 308px;
+  height: 25px;
+  margin-top: 1.5rem;
+}
+
+.cart-total h3 {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  text-transform: uppercase;
+  opacity: 0.8;
+}
+
+.cart-total p {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  margin-left: auto;
+}
+
+.cart__container button {
+  width: 313px;
+  height: 48px;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 18px;
+  text-align: center;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: var(--color-white);
+  background-color: var(--color-dark-orange);
+  border-style: none;
+  margin-top: 1.5rem;
+}
+
+.cart__container button:hover {
+  cursor: pointer;
+  background-color: var(--color-pale-orange);
+}
