--- a/src/containers/Checkout/CheckoutSummary/CheckoutSummary.css
+++ b/src/containers/Checkout/CheckoutSummary/CheckoutSummary.css
@@ -164,7 +164,7 @@
   color: var(--color-dark-orange);
 }
 
-.checkoutSummary__container button {
+.checkoutSummary-button {
   width: 284px;
   height: 48px;
   font-weight: 700;
@@ -174,12 +174,24 @@
   letter-spacing: 1px;
   text-transform: uppercase;
   border-style: none;
-  background-color: var(--color-dark-orange);
   color: var(--color-white);
   margin-top: 1.5rem;
 }
 
-.checkoutSummary__container button:hover {
+.checkoutSummary-buttonActive {
+  background-color: var(--color-dark-orange);
+}
+
+.checkoutSummary-buttonDisabled {
+  background-color: gray;
+}
+
+.checkoutSummary-buttonActive:hover {
   cursor: pointer;
   background-color: var(--color-pale-orange);
+}
+
+.checkoutSummary-buttonDisabled:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
